# NTechLabTest

./: CMakeLists.txt  Readme.md  conanfile.py
inc/: Matrix.hpp  SafeQueue.hpp  ThreadPool.hpp  WorkerInterface.hpp
src/: main.cpp
